js/src/tests/test262/built-ins/Error/prototype/S15.11.3.1_A1_T1.js
var
proto
=
Error
.
prototype
;
verifyNotConfigurable
(
Error
"
prototype
"
)
;
try
{
assert
.
sameValue
(
delete
Error
.
prototype
false
)
;
}
catch
(
e
)
{
if
(
e
instanceof
Test262Error
)
{
throw
e
;
}
assert
(
e
instanceof
TypeError
)
;
}
if
(
Error
.
prototype
!
=
=
proto
)
{
throw
new
Test262Error
(
'
#
2
:
var
proto
=
Error
.
prototype
;
delete
Error
.
prototype
;
Error
.
prototype
=
=
=
proto
.
Actual
:
'
+
Error
.
prototype
)
;
}
reportCompare
(
0
0
)
;
